# cpp-learning-code

./: README.md
CPP_Learning_Code/chap-01/: 1-hello_world.cpp  2-parrot.cpp  3-array.cpp  4-calculator.cpp
CPP_Learning_Code/chap-02/: 1-first_class.cpp  2-constructor.cpp  3-clone.cpp  CMakeLists.txt
CPP_Learning_Code/chap-02/4-rectangle/: Rectangle.cpp  Rectangle.h  main.cpp
CPP_Learning_Code/chap-02/5-polygon/: Polygon.cpp  Polygon.h  main.cpp
CPP_Learning_Code/chap-02/6-dog/: Dog.cpp  Dog.h  Toto.h  main.cpp  question
CPP_Learning_Code/chap-03/: 1-vectors.cpp  2-sequentials.cpp  4-strings.cpp  5-tuples.cpp  reponses.md
CPP_Learning_Code/chap-03/3-associatives/: keys.h  main.cpp
CPP_Learning_Code/chap-04/: Truc.cpp  VirtualTable.h
CPP_Learning_Code/chap-04/1-hierarchy/: Boss.cpp  Boss.h  Employee.h  Intern.cpp  Staff.h
CPP_Learning_Code/chap-04/2-farm/: Animal.h  Chicken.h  FarmHouse.cpp  Opera.h
CPP_Learning_Code/chap-04/3-vehicles/: Car.h  FlyingCar.h  Vehicle.h
CPP_Learning_Code/tp-01/: TP1.md  exo2.cpp  exo3.cpp  exo4.cpp  translator.cpp
CPP_Learning_Code/tp-02/: Clock.h  MinuteHand.cpp  MinuteHand.h  SecondHand.cpp  SecondHand.h  TP2.md
CPP_Learning_Code/tp-02/Exercices/: Histogram.cpp
CPP_Learning_Code/tp-03/: CMakeLists.txt  Erastothenes.cpp  NumAndName.cpp  Point.cpp  TP3.md
CPP_Learning_Code/tp-03/PhoneBook/: Person.h  PhoneNumber.cpp  PhoneNumber.h  Tests.cpp  Tests.h
CPP_Learning_Code/tp-04/: CMakeLists.txt  Test.cpp
CPP_Learning_Code/tp-04/PhoneCalls/: HomePhone.cpp  HomePhone.h  Main.cpp  MobilePhone.h  Person.h  Phone.h
(+4 files in other folders)
